Work towards experiment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,6 @@
         "**/CVS": true,
         "**/.DS_Store": true,
         "**/.esp-*": true
-    }
+    },
+    "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\advanced-iot-lisat-WFz-puxS\\Scripts\\python.exe"
 }
