--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,6 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        
         {
             "name": "Arduino",
             "type": "arduino",
@@ -44,6 +40,13 @@
             "type": "python",
             "request": "launch",
             "program": "${file}",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "Python: SerialCapture File",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/tests-python-esp8266/python-audio-tools/receive_buffer.py",
             "console": "integratedTerminal"
         }
     ]
