--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,5 +11,5 @@
         "**/.DS_Store": true,
         "**/.esp-*": true
     },
-    "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\advanced-iot-lisat-WFz-puxS\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\d.zwart\\.virtualenvs\\advanced-iot-lisat-ykwdXRB4\\Scripts\\python.exe"
 }
