--- a/.gitignore
+++ b/.gitignore
@@ -34,7 +34,7 @@
 # Matlab
 *.asv
 # Python/Arduino Project
-audio
+audio/EncodeAudio-windows/
 # CCS 10
 examples-ccs-v10/voice_detection_MSP_EXP432P401R_nortos_ccs/Debug/
 
