--- a/argos3-lisat/loop_functions/lisat_loop_functions/CMakeLists.txt
+++ b/argos3-lisat/loop_functions/lisat_loop_functions/CMakeLists.txt
@@ -1,7 +1,8 @@
 link_directories(${CMAKE_BINARY_DIR}/controllers/footbot_lisat)
 set(lisat_loop_functions_SOURCES lisat_loop_functions.cpp)
 
-add_library(lisat_loop_functions MODULE ${lisat_loop_functions_SOURCES})
+add_library(lisat_loop_functions SHARED ${lisat_loop_functions_SOURCES})
+
 target_link_libraries(lisat_loop_functions
   footbot_lisat
   argos3core_simulator
