--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,9 @@ numpy = "*"
 matplotlib = "*"
 simpleaudio = "*"
 scipy = "*"
+asyncio = "*"
+aioconsole = "*"
+aioserial = "*"
 
 [requires]
 python_version = "3.7"
