Feature/43 rebuild motor driver (#45)
* Took over latest CCS10 state

* Made motors rotate

* Drive all wind directions

* Applied more subtle movement possibilities

* Start on python UART tx/rx debugging

* Added UART CLI on python and MSP432 side

* Some leftovers

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -43,6 +43,14 @@
             "console": "integratedTerminal"
         },
         {
+            "name": "Python: LISAT",
+            "type": "python",
+            "request": "launch",
+            "module": "python_lisat.main",
+            "cwd": "${workspaceFolder}/",
+            "console": "integratedTerminal"
+        },
+        {
             "name": "Python: SerialCapture File",
             "type": "python",
             "request": "launch",
