Something goes wrong serial data arriving on MSP432. PubSub problematic on Serial probably.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,8 +8,7 @@
         "**/.svn": true,
         "**/.hg": true,
         "**/CVS": true,
-        "**/.DS_Store": true,
-        "**/.esp-*": true
+        "**/.DS_Store": true
     },
     "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\advanced-iot-lisat-WFz-puxS\\Scripts\\python.exe"
 }
