--- a/ccs10-projects/adcbufmultichannel_MSP_EXP432P401R_tirtos_ccs/.settings/org.eclipse.core.resources.prefs
+++ b/ccs10-projects/adcbufmultichannel_MSP_EXP432P401R_tirtos_ccs/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
+encoding//Debug/DSP/subdir_rules.mk=UTF-8
+encoding//Debug/DSP/subdir_vars.mk=UTF-8
 encoding//Debug/Robot/subdir_rules.mk=UTF-8
 encoding//Debug/Robot/subdir_vars.mk=UTF-8
 encoding//Debug/SerialInterface/subdir_rules.mk=UTF-8
