--- a/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/.project
+++ b/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tirtos_builds_MSP_EXP432P401R_release_ccs</name>
+	<name>MSP432P401R_TIRTOS_ccs</name>
 	<comment></comment>
 	<projects>
 	</projects>
