--- a/src/MSP432LISAT/MSP432P401R_LISAT_ccs/.project
+++ b/src/MSP432LISAT/MSP432P401R_LISAT_ccs/.project
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>adcbufmultichannel_MSP_EXP432P401R_tirtos_ccs</name>
+	<name>MSP432P401R_LISAT_ccs</name>
 	<comment></comment>
 	<projects>
-		<project>tirtos_builds_MSP_EXP432P401R_release_ccs</project>
+		<project>MSP432P401R_TIRTOS_ccs</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
