--- a/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/release.cfg
+++ b/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/release.cfg
@@ -39,7 +39,7 @@ var Clock = xdc.useModule('ti.sysbios.knl.Clock');
  * support a minimum period of 10000 us and multiples of 10000 us.
  * TI platforms have a default of 1000 us.
  */
-Clock.tickPeriod = 1000;
+Clock.tickPeriod = 100; // Adjusted to fit tachometers (120:1 gear ratio, RPM 300 is possible: 600Hz update rate, so 2kHz sys clock is good enough.)
 
 
 
