Added new config

--- a/src/MSP432LISAT/MSP432P401R_LISAT_ccs/.cproject
+++ b/src/MSP432LISAT/MSP432P401R_LISAT_ccs/.cproject
@@ -103,6 +103,9 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
+					<sourceEntries>
+						<entry excluding="MSP432_LISAT.syscfg" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+					</sourceEntries>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings">
