adjust gitignore to exclude pycache files

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,4 @@ src/MSP432LISAT/.jxbrowser-data/
 src/MSP432LISAT/MSP432P401R_LISAT_ccs/.settings/
 
 src/MSP432LISAT/RemoteSystemsTempFiles/
+*.pyc
