Added test plot for direction

--- a/Pipfile
+++ b/Pipfile
@@ -9,7 +9,7 @@ autopep8 = "*"
 [packages]
 playsound = "*"
 pyserial = "*"
-numpy = "*"
+numpy = "==1.19.3"
 matplotlib = "*"
 simpleaudio = "*"
 scipy = "*"
