Implement test setup for two mics

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,5 +34,5 @@
         "**/CVS": true,
         "**/.DS_Store": true
     },
-    "python.pythonPath": "C:\\Users\\david\\.virtualenvs\\advanced-iot-lisat-WFz-puxS\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\s154384\\.virtualenvs\\advanced-iot-lisat-tO_KSU2Q\\Scripts\\python.exe"
 }
