--- a/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/release.cfg
+++ b/src/MSP432LISAT/MSP432P401R_TIRTOS_ccs/release.cfg
@@ -152,7 +152,7 @@ halHwi.checkStackFlag = false;
  *      plugging in a default while(1) trap when exception occur. This option
  *      does not raise an error with the Error module.
  */
-//m3Hwi.enableException = true;
+m3Hwi.enableException = true;
 //m3Hwi.enableException = false;
 m3Hwi.excHandlerFunc = null;
 
